# cleared

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  GO-LIVE.md  INTEGRATIONS.md  README.md  docker-entrypoint.sh  fly.toml  package-lock.json  pyproject.toml  render.yaml  requirements.txt  run.ps1  run.sh
cleared/: api.py  audit.py  auth.py  cdd_agent.py  cli.py  config.py  demo.py  knowledge.py  llm.py  mock.py  models.py  pdf.py  professions.py  reminders.py  sample_data.py  sanctions_sample.json  screening.py  settings.py  smr_agent.py  store.py  webhooks.py
cleared/connectors/: generic_crm.py  myob.py  xero.py
cleared/rules/: austrac_real_estate_rules.json
eval/: cases.json  run_eval.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  index.css  main.tsx  theme.tsx  types.ts
frontend/src/components/: AdminRoute.tsx  Layout.tsx  ProtectedRoute.tsx  RecordView.tsx  Reveal.tsx  charts.tsx  primitives.tsx
frontend/src/pages/: About.tsx  Admin.tsx  Changelog.tsx  Contact.tsx  Dashboard.tsx  Demo.tsx  Home.tsx  Login.tsx  NotFound.tsx  Pricing.tsx  Privacy.tsx  Records.tsx  Register.tsx  Security.tsx  Settings.tsx  Terms.tsx
tests/: conftest.py  test_api.py  test_auth.py  test_connectors.py  test_reviews_audit.py  test_store.py
