[project]
name = "cleared"
version = "0.1.0"
description = "Audit-grade AML/CTF customer due diligence agent for Australian real estate (AUSTRAC Tranche 2)"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.69",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "python-dotenv>=1.0",
  "rapidfuzz>=3.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cleared*"]
